Axios interceptor race condition fixed! - CurrentUserContext: using useMemo to simulate componentWillMount, which is fired before children's componentDidMount - App: styled scrollbar

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -36,3 +36,24 @@ figure {
   height: 100%;
   width: 100%;
 }
+
+/* scrollbar */
+/* width */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+*::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
